Add Future, CompletableFuture, and virtual threads deep dive.
Covers Callable/Future thread relationship, CompletableFuture pipelines,
virtual thread carriers and pinning, Spring Boot 3.2 config, and Mermaid
diagrams with Q&A cross-links and cheat sheet entries.

Co-authored-by: Cursor <cursoragent@cursor.com>